--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
               <iframe src="https://giphy.com/embed/ftdgz93tCq11jqu2zw" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
             </div>
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>PHP project where I work with MYSQL to create, update and delete notes. </p>
             <p><a href="https://github.com/algenisjo/MYSQL-Notes" class="a2" target="_blank">My Source Code</a> 
           </div>
 
@@ -65,7 +65,7 @@
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/zVzP5ftLLFjpJ4MN9o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
-        <p>DescriptionDescription Description Description Description Description Description Description </p>
+        <p>A copy of the NASA ARTEMIS landing page. Scrolling parallax with CSS was a key feature. </p>
         <p><a href="https://github.com/algenisjo/nasartemis" class="a2" target="_blank">My Source Code</a> 
           <span><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">NASA Artemis Link</a></span></p>
       </div>
@@ -75,7 +75,7 @@
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/DJLfXH5l2RnquOwB3i" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
-        <p>DescriptionDescription Description Description Description Description Description Description </p>
+        <p>A copy of the Ableton landing page. Here i am building my experience with HTML & CSS. </p>
         <p><a href="https://github.com/algenisjo/Ableton-Landing-Page/tree/main/Ableton" class="a2" target="_blank">My Source Code</a> 
           <span><a href="https://www.ableton.com/en/about/" class="a2" target="_blank">Ableton Link</a></span></p>
       </div>
@@ -85,7 +85,7 @@
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/3pCvfdhNaK0GFbuJXF" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
-        <p>DescriptionDescription Description Description Description Description Description Description </p>
+        <p>A copy of the W3Schools landing page.</p>
         <p><a href="https://github.com/algenisjo/W3School" class="a2"target="_blank">My Source Code</a>
           <span><a href="https://www.w3schools.com" class="a2" target="_blank">W3Schools Link</a></span>
         </p>
@@ -96,7 +96,7 @@
         <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
           <iframe src="https://giphy.com/embed/VPGzrvGRXPQmqA6idy" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
-        <p>DescriptionDescription Description Description Description Description Description Description </p>
+        <p>A copy of the DuckDuckGo landing page. This project is web responise.</p>
         <p><a href="https://github.com/algenisjo/DDGLP" class="a2" target="_blank">My Source Code</a>
         <span><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">Duck Duck Go Link</a></span>
         </p>
@@ -111,14 +111,14 @@
             <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
               <iframe src="https://giphy.com/embed/grqiIFjuL0cERpEWX1" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
             </div>
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>PHP project where I validate information sent to the server and output messages accordingly.</p>
             <p><a href="https://github.com/algenisjo/Registration-Form" class="a2" target="_blank">My Source Code</a> 
           </div>
 
           <div class="card">
             <h2>Current Portfolio</h2>
            <!-- <img src="img/calculator.gif" alt="JavaScript Calculator"  class="gif" style="height: 220px;" /> -->
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>The code behind this current portfolio.</p>
             <p><a href="https://github.com/algenisjo/Fall-21-Portfolio" class="a2" target="_blank">My Source Code</a> 
           </div>
 
@@ -127,7 +127,7 @@
             <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
               <iframe src="https://giphy.com/embed/KJaa5XacqkXNqS9vQT" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
             </div>
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>A JavaScript project where I work with fetch methods and an API to generate random quotes.</p>
             <p><a href="https://github.com/algenisjo/quote-generator" class="a2" target="_blank">My Source Code</a></p>
           </div>
     
@@ -136,7 +136,7 @@
             <div style="width:100%;height:0;padding-bottom:66%;position:relative;">
               <iframe src="https://giphy.com/embed/MzR7PI810kAA3GgcBX" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
             </div>
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>A front-end calculator that uses Javascript to populate the input and return results.</p>
             <p><a href="https://github.com/algenisjo/JavascriptCalculator" class="a2" target="_blank">My Source Code</a>
             </p>
           </div>
@@ -144,7 +144,7 @@
           <div class="card">
             <h2>NE Coterie</h2>
             <div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe src="https://giphy.com/embed/e6436laHba7a4uv0Oa" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>I have familiarity with Wordpress and created a clothing line business with this technology.</p>
             <p><a class="a2">Link Out Of Date</a></p>
           </div>
 
@@ -153,7 +153,7 @@
             <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
               <iframe src="https://giphy.com/embed/C9DJCTkbTRwEL2lXqF" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
             </div>
-            <p>DescriptionDescription Description Description Description Description Description Description </p>
+            <p>Working with PHP to call an API and parse the information back to the users.</p>
             <p><a href="https://github.com/algenisjo/API-Web-Application" class="a2" target="_blank">My Source Code</a> 
           </div>
 
