--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
     </div>
 
     <div class="card">
-    <h2>NASA ARTEMIS</h2>
-    <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
-    <iframe src="https://giphy.com/embed/zVzP5ftLLFjpJ4MN9o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-    </div>
-    <p>A copy of the NASA ARTEMIS landing page. Scrolling parallax with CSS was a key feature. </p>
-    <p><a href="https://github.com/algenisjo/nasartemis" class="a2" target="_blank">My Source Code</a> 
-    <span><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">NASA Artemis Link</a></span></p>
+      <h2>NASA ARTEMIS</h2>
+      <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
+        <iframe src="https://giphy.com/embed/zVzP5ftLLFjpJ4MN9o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+      </div>
+      <p>A copy of the NASA ARTEMIS landing page. Scrolling parallax with CSS was a key feature. </p>
+      <div class="links">
+        <div>
+          <p><a href="https://github.com/algenisjo/nasartemis" class="a2" target="_blank">My Source Code</a></p>
+        </div>
+        <div>
+          <p><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">NASA Artemis Link</a></p>
+        </div>
+      </div>
     </div>
 
     <div class="card">
