--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
     <h1>Algenis Joaquin Ortiz</h1>
     </div>
 
-  <div class="topnav">
-    <a href="https://github.com/algenisjo" target="_blank">GitHub</a>
-    <a href="https://www.linkedin.com/in/algenis-joaquin-ortiz-88345914b/" target="_blank">LinkedIn</a>
-    <a href="https://drive.google.com/file/d/1Q8K735ccYZhNyjYRmJHf05GEEoQdePaL/view?usp=sharing" target="_blank" >Resume</a>
+  <div class="topnav2">
+    <div>
+      <a href="https://github.com/algenisjo" target="_blank">GitHub</a>
     </div>
+    <div>
+      <a href="https://www.linkedin.com/in/algenis-joaquin-ortiz-88345914b/" target="_blank">LinkedIn</a>
+    </div>
+   <div>
+    <a href="https://drive.google.com/file/d/1Q8K735ccYZhNyjYRmJHf05GEEoQdePaL/view?usp=sharing" target="_blank" >Resume</a>
+   </div>
+  </div>
 
   <div class="maincolumn">
 
