--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
         <p>A copy of the NASA ARTEMIS landing page. Scrolling parallax with CSS was a key feature. </p>
         <div class="links">
           <div>
-            <p><a href="https://github.com/algenisjo/nasartemis" class="a2" target="_blank">My Source Code</a></p>
+            <p><a href="https://nasaartemis.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/nasaartemisproject" class="a2" target="_blank">My Source Code</a></p>
           </div>
           <div>
             <p><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">NASA Artemis Link</a></p>
@@ -99,7 +102,10 @@
         <p>A copy of the Ableton landing page. Here i am building my experience with HTML & CSS. </p>
         <div class="links">
           <div>
-            <p><a href="https://github.com/algenisjo/Ableton-Landing-Page/tree/main/Ableton" class="a2" target="_blank">My Source Code</a></p>
+            <p><a href="https://abletonproject.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/ableton" class="a2" target="_blank">My Source Code</a></p>
           </div>
           <div>
             <p><a href="https://www.ableton.com/en/about/" class="a2" target="_blank">Ableton Link</a></p>
@@ -115,7 +121,10 @@
       <p>A copy of the W3Schools landing page.</p>
         <div class="links">
           <div>
-            <p><a href="https://github.com/algenisjo/W3School" class="a2"target="_blank">My Source Code</a></p>
+            <p><a href="https://w3schools-project.netlify.app" class="a2" target="_blank">Live Project Link</a></span></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/w3schools-project" class="a2"target="_blank">My Source Code</a></p>
           </div>
           <div>
             <p><a href="https://www.w3schools.com" class="a2" target="_blank">W3Schools Link</a></span></p>
@@ -131,10 +140,13 @@
       <p>A copy of the DuckDuckGo landing page. This project is web responise.</p>
       <div class="links">
         <div>
-          <p><a href="https://github.com/algenisjo/DDGLP" class="a2" target="_blank">My Source Code</a></p>
+          <p><a href="https://duckduckgo-lp.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
         </div>
         <div>
-          <p><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">DuckDuckGo Link</a></p>
+          <p><a href="https://github.com/algenisjo/duckduckgo" class="a2" target="_blank">My Source Code</a></p>
+        </div>
+        <div>
+          <p><a href="https://duckduckgo.com" class="a2" target="_blank">DuckDuckGo Link</a></p>
         </div>
       </div>
 
@@ -144,77 +156,80 @@
 
     <div class="column">
 
-    <div class="card">
-      <h2>Login & Registration Form</h2>
-      <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
-        <iframe src="https://giphy.com/embed/grqiIFjuL0cERpEWX1" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-      </div>
-      <p>PHP project where I validate information sent to the server and output messages accordingly.</p>
-      <div class="links">
-        <div>
-          <p><a href="https://github.com/algenisjo/Registration-Form" class="a2" target="_blank">My Source Code</a> </p>
+      <div class="card">
+        <h2>Login & Registration Form</h2>
+        <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
+          <iframe src="https://giphy.com/embed/grqiIFjuL0cERpEWX1" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>PHP project where I validate information sent to the server and output messages accordingly.</p>
+        <div class="links">
+          <div>
+            <p><a href="http://registrationform-as23adf.epizy.com/?i=1" class="a2" target="_blank">Live Project Link</a> </p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/Registration-Form" class="a2" target="_blank">My Source Code</a> </p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="card">
-      <h2>Current Portfolio</h2>
-      <div style="width:100%;height:0;padding-bottom:66%;position:relative;">
-        <iframe src="https://giphy.com/embed/ZaDNSX6YxQUfLZitXf" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-      </div>
-      <p>The code behind this current portfolio.</p>
-      <div class="links">
-        <div>
-          <p><a href="https://github.com/algenisjo/Fall-21-Portfolio" class="a2" target="_blank">My Source Code</a></p>
+      <div class="card">
+        <h2>Current Portfolio</h2>
+        <div style="width:100%;height:0;padding-bottom:66%;position:relative;">
+          <iframe src="https://giphy.com/embed/ZaDNSX6YxQUfLZitXf" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>The code behind this current portfolio.</p>
+        <div class="links">
+          <div>
+            <p><a href="https://github.com/algenisjo/Fall-21-Portfolio" class="a2" target="_blank">My Source Code</a></p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="card">
-      <h2>Quote Generator</h2>
-      <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
-       <iframe src="https://giphy.com/embed/KJaa5XacqkXNqS9vQT" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-      </div>
-      <p>A JavaScript project where I work with fetch methods and an API to generate random quotes.</p>
-      <div class="links">
-        <div>
-          <p><a href="https://github.com/algenisjo/quote-generator" class="a2" target="_blank">My Source Code</a></p>
+      <div class="card">
+        <h2>Quote Generator</h2>
+        <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
+        <iframe src="https://giphy.com/embed/KJaa5XacqkXNqS9vQT" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>A JavaScript project where I work with fetch methods and an API to generate random quotes.</p>
+        <div class="links">
+          <div>
+            <p><a href="https://github.com/algenisjo/quote-generator" class="a2" target="_blank">My Source Code</a></p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="card">
-      <h2>JavaScript Calculator</h2>
-      <div style="width:100%;height:0;padding-bottom:66%;position:relative;">
-       <iframe src="https://giphy.com/embed/MzR7PI810kAA3GgcBX" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-      </div>
-      <p>A front-end calculator that uses Javascript to populate the input and return results.</p>
-      <div class="links">
-        <div>
-         <p><a href="https://github.com/algenisjo/JavascriptCalculator" class="a2" target="_blank">My Source Code</a></p>
+      <div class="card">
+        <h2>JavaScript Calculator</h2>
+        <div style="width:100%;height:0;padding-bottom:66%;position:relative;">
+        <iframe src="https://giphy.com/embed/MzR7PI810kAA3GgcBX" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>A front-end calculator that uses Javascript to populate the input and return results.</p>
+        <div class="links">
+          <div>
+          <p><a href="https://github.com/algenisjo/JavascriptCalculator" class="a2" target="_blank">My Source Code</a></p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="card">
-    <h2>NE Coterie</h2>
-    <div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe src="https://giphy.com/embed/e6436laHba7a4uv0Oa" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-    <p>I have familiarity with Wordpress and created a clothing line business with this technology.</p>
-    <p><a class="a2">Link Out Of Date</a></p>
-    </div>
-
-    <div class="card">
-      <h2>Bitcoin Prices</h2>
-      <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
-        <iframe src="https://giphy.com/embed/C9DJCTkbTRwEL2lXqF" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+      <div class="card">
+      <h2>NE Coterie</h2>
+      <div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe src="https://giphy.com/embed/e6436laHba7a4uv0Oa" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+      <p>I have familiarity with Wordpress and created a clothing line business with this technology.</p>
+      <p><a class="a2">Link Out Of Date</a></p>
       </div>
-      <p>Working with PHP to call an API and parse the information back to the users.</p>
-      <div class="links">
-        <div>
-         <p><a href="https://github.com/algenisjo/API-Web-Application" class="a2" target="_blank">My Source Code</a> </p>
+
+      <div class="card">
+        <h2>Bitcoin Prices</h2>
+        <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
+          <iframe src="https://giphy.com/embed/C9DJCTkbTRwEL2lXqF" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>Working with PHP to call an API and parse the information back to the users.</p>
+        <div class="links">
+          <div>
+          <p><a href="https://github.com/algenisjo/API-Web-Application" class="a2" target="_blank">My Source Code</a> </p>
+          </div>
         </div>
       </div>
-    </div>
 
     </div>          
 
