--- a/index.html
+++ b/index.html
@@ -59,20 +59,19 @@
     <div class="column">
 
       <div class="card">
-      <h2>MYSQL Notes</h2>
-      <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
-      <iframe src="https://giphy.com/embed/ftdgz93tCq11jqu2zw" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-      </div>
-      <p>PHP project where I work with MYSQL to create, update and delete notes. </p>
-
-      <div class="links">
-        <div>
-          <p><a href="https://github.com/algenisjo/MYSQL-Notes" class="a2" target="_blank">My Source Code</a></p>
+        <h2>MYSQL Notes</h2>
+        <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
+          <iframe src="https://giphy.com/embed/aVeGWLz04X102xRhir" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>     
         </div>
-        <div>
-
+        <p>Dynamic PHP project where I work with MYSQL to create, update and delete notes. </p>
+        <div class="links">
+          <div>
+            <p><a href="http://mysqlnotesapp.lovestoblog.com/MYSQLNOTES/" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/MYSQL-Notes" class="a2" target="_blank">My Source Code</a></p>
+          </div>
         </div>
-      </div>
       </div>
 
       <div class="card">
@@ -167,7 +166,7 @@
             <p><a href="http://registrationform-as23adf.epizy.com/?i=1" class="a2" target="_blank">Live Project Link</a> </p>
           </div>
           <div>
-            <p><a href="https://github.com/algenisjo/Registration-Form" class="a2" target="_blank">My Source Code</a> </p>
+            <p><a href="https://github.com/algenisjo/registrationfrom3" class="a2" target="_blank">My Source Code</a> </p>
           </div>
         </div>
       </div>
