changed around the layout projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
   <div class="topnav2">
-    <div>
+    <div class="ahover">
       <a href="https://github.com/algenisjo" target="_blank">GitHub</a>
     </div>
     <div>
@@ -75,6 +75,22 @@
       </div>
 
       <div class="card">
+        <h2>Quote Generator</h2>
+        <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
+        <iframe src="https://giphy.com/embed/KJaa5XacqkXNqS9vQT" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>A JavaScript project where I work with fetch methods and an API to generate random quotes.</p>
+        <div class="links">
+          <div>
+            <p><a href="https://kind-franklin-b42dd7.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/quote-generator" class="a2" target="_blank">My Source Code</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
         <h2>NASA ARTEMIS</h2>
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/zVzP5ftLLFjpJ4MN9o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
@@ -93,24 +109,13 @@
         </div>
       </div>
 
-      <div class="card">
-        <h2>Ableton</h2>
-        <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
-          <iframe src="https://giphy.com/embed/DJLfXH5l2RnquOwB3i" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-        </div>
-        <p>A copy of the Ableton landing page. Here i am building my experience with HTML & CSS. </p>
-        <div class="links">
-          <div>
-            <p><a href="https://abletonproject.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
-          </div>
-          <div>
-            <p><a href="https://github.com/algenisjo/ableton" class="a2" target="_blank">My Source Code</a></p>
-          </div>
-          <div>
-            <p><a href="https://www.ableton.com/en/about/" class="a2" target="_blank">Ableton Link</a></p>
-          </div>
-        </div>
+    <div class="card">
+        <h2>NE Coterie</h2>
+        <div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe src="https://giphy.com/embed/e6436laHba7a4uv0Oa" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        <p>I have familiarity with Wordpress and created a clothing line business with this technology.</p>
+        <p><a class="a2">Link Out Of Date</a></p>
       </div>
+  
 
       <div class="card">
       <h2>W3Schools</h2>
@@ -172,6 +177,25 @@
       </div>
 
       <div class="card">
+        <h2>Ableton</h2>
+        <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
+          <iframe src="https://giphy.com/embed/DJLfXH5l2RnquOwB3i" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>A copy of the Ableton landing page. Here i am building my experience with HTML & CSS. </p>
+        <div class="links">
+          <div>
+            <p><a href="https://abletonproject.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/ableton" class="a2" target="_blank">My Source Code</a></p>
+          </div>
+          <div>
+            <p><a href="https://www.ableton.com/en/about/" class="a2" target="_blank">Ableton Link</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
         <h2>Current Portfolio</h2>
         <div style="width:100%;height:0;padding-bottom:66%;position:relative;">
           <iframe src="https://giphy.com/embed/ZaDNSX6YxQUfLZitXf" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
@@ -180,19 +204,6 @@
         <div class="links">
           <div>
             <p><a href="https://github.com/algenisjo/Fall-21-Portfolio" class="a2" target="_blank">My Source Code</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <h2>Quote Generator</h2>
-        <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
-        <iframe src="https://giphy.com/embed/KJaa5XacqkXNqS9vQT" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-        </div>
-        <p>A JavaScript project where I work with fetch methods and an API to generate random quotes.</p>
-        <div class="links">
-          <div>
-            <p><a href="https://github.com/algenisjo/quote-generator" class="a2" target="_blank">My Source Code</a></p>
           </div>
         </div>
       </div>
@@ -208,13 +219,6 @@
           <p><a href="https://github.com/algenisjo/JavascriptCalculator" class="a2" target="_blank">My Source Code</a></p>
           </div>
         </div>
-      </div>
-
-      <div class="card">
-      <h2>NE Coterie</h2>
-      <div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe src="https://giphy.com/embed/e6436laHba7a4uv0Oa" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-      <p>I have familiarity with Wordpress and created a clothing line business with this technology.</p>
-      <p><a class="a2">Link Out Of Date</a></p>
       </div>
 
       <div class="card">
