--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
     <div class="column">
 
       <div class="card">
+        <h2>Bored App</h2>
+        <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
+          <iframe src="https://giphy.com/embed/aVeGWLz04X102xRhir" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>     
+        </div>
+        <p>Laravel project that interacts with boredapi.com to recommend activities to growers depending on the category they select.</p>
+        <div class="links">
+          <div>
+            <p><a href="http://137.184.138.232/education" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/bored" class="a2" target="_blank">My Source Code</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
         <h2>MYSQL Notes</h2>
         <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
           <iframe src="https://giphy.com/embed/aVeGWLz04X102xRhir" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>     
