--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
           <iframe src="https://giphy.com/embed/HCXpdgcYlD6b4aGvjw" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>     
         </div>
-        <p>Laravel project that interacts with boredapi.com to recommend activities to growers depending on the category they select.</p>
+        <p>Laravel project that interacts with boredapi.com to recommend activities to browsers depending on the category they select.</p>
         <div class="links">
           <div>
             <p><a href="http://137.184.138.232/education" class="a2" target="_blank">Live Project Link</a></p>
