added laravel as a skill

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="card">
     <h2>Skills</h2>
-    <p> API's & Web Services, OOP, Web Responsive Design (Media Queries), JQuery, GitHub, Terminal, Relational Databases (MYSQL)</p>
+    <p> API's & Web Services, OOP, Web Responsive Design (Media Queries), JQuery, GitHub, Terminal, Relational Databases (MYSQL), Laravel</p>
     </div>
 
     </div>
