update topnav2 links

--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
 
 <body>
 
-  <div class="header">
-    <h1>Algenis Joaquin Ortiz</h1>
-    </div>
+<div class="header">
+<h1>Algenis Joaquin Ortiz</h1>
+</div>
 
-  <div class="topnav2">
-    <div class="ahover">
-      <a href="https://github.com/algenisjo" target="_blank">GitHub</a>
-    </div>
-    <div>
-      <a href="https://www.linkedin.com/in/algenis-joaquin-ortiz-88345914b/" target="_blank">LinkedIn</a>
-    </div>
-   <div>
-    <a href="https://drive.google.com/file/d/1Q8K735ccYZhNyjYRmJHf05GEEoQdePaL/view?usp=sharing" target="_blank" >Resume</a>
-   </div>
+<div class="topnav2">
+
+  <div>
+    <a class="a2" href="https://github.com/algenisjo" target="_blank">GitHub</a>
   </div>
+
+  <div>
+    <a class="a2" href="https://www.linkedin.com/in/algenis-joaquin-ortiz-88345914b/" target="_blank">LinkedIn</a>
+  </div>
+
+  <div>
+    <a class="a2" href="https://drive.google.com/file/d/1Q8K735ccYZhNyjYRmJHf05GEEoQdePaL/view?usp=sharing" target="_blank" >Resume</a>
+  </div>
+
+</div>
 
   <div class="maincolumn">
 
@@ -34,8 +38,8 @@
 
     <div class="card">
     <h2>About Me</h2>
-    <p>I am learning everyday. I have aspirations of being a great back-end developer. 
-    I am comfortable creating front-end projects and I am building my foundation of back-end technoligies by practicing PHP and JavaScript.</p>
+    <p>I am a PHP back-end developer and learning new skills everyday. 
+    I enjoy coding and researching solutions to problems I come across.</p>
     </div>
 
     <div class="card">
