changed my about me section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
     <div class="card">
     <h2>About Me</h2>
-    <p>I am a PHP back-end developer and learning new skills everyday. 
-    I enjoy coding and researching solutions to problems I come across.</p>
+    <p>I’m a web developer with a strong interest and enjoyment in front-end development. I have a tech stack of HTML, CSS, JavaScript, and PHP technologies. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
     </div>
 
     <div class="card">
