--- a/index.html
+++ b/index.html
@@ -54,12 +54,28 @@
 
     <div class="card">
     <h2>Skills</h2>
-    <p> API's & Web Services, OOP, Web Responsive Design (Media Queries), JQuery, GitHub, Terminal, Relational Databases (MYSQL), Laravel</p>
+    <p> API's & Web Services, OOP, JQuery, GitHub, Terminal, <br >Web Responsive Design (Media Queries), <br> Relational Databases (MYSQL), Laravel</p>
     </div>
 
     </div>
 
     <div class="column">
+
+      <div class="card">
+        <h2>The North Face</h2>
+        <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
+          <iframe src="https://giphy.com/embed/HCXpdgcYlD6b4aGvjw" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>     
+        </div>
+        <p>Front-End project that is Mobile Web Responsive and utilizes JQuery to animate the dropdown menu.</p>
+        <div class="links">
+          <div>
+            <p><a href="https://cranky-johnson-c65009.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/thenorthface" class="a2" target="_blank">My Source Code</a></p>
+          </div>
+        </div>
+      </div>
 
       <div class="card">
         <h2>Bored App</h2>
@@ -76,6 +92,7 @@
           </div>
         </div>
       </div>
+
       <div class="card">
         <h2>MYSQL Notes</h2>
         <div style="width:100%;height:0;padding-bottom:47%;position:relative;">
