--- a/index.html
+++ b/index.html
@@ -191,9 +191,25 @@
 
       </div>
 
-    </div>
+    </div> 
 
     <div class="column">
+    
+      <div class="card">
+        <h2>Chiron</h2>
+        <div>
+          <img src="img/hotspot.jpg" alt="" style="width:100%">
+        </div>
+        <p>Current Front-end project where I mirror the Bugatti Chiron page. Deployment and scaling is still in progress.</p>
+        <div class="links">
+          <div>
+            <p><a href="https://elated-heisenberg-ec425f.netlify.app" class="a2" target="_blank">Live Project Link</a> </p>
+          </div>
+          <div>
+            <p><a href="https://github.com/algenisjo/chiron" class="a2" target="_blank">My Source Code</a> </p>
+          </div>
+        </div>
+      </div>
 
       <div class="card">
         <h2>Login & Registration Form</h2>
