--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
           <div>
             <p><a href="https://github.com/algenisjo/thenorthface" class="a2" target="_blank">My Source Code</a></p>
           </div>
+          <div>
+            <p><a href="https://www.thenorthface.com" class="a2" target="_blank">TNF Link</a></p>
+          </div>
         </div>
       </div>
 
@@ -194,11 +197,10 @@
     </div> 
 
     <div class="column">
-    
-      <div class="card">
+          <div class="card">
         <h2>Chiron</h2>
-        <div>
-          <img src="img/hotspot.jpg" alt="" style="width:100%">
+        <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
+          <iframe src="https://giphy.com/embed/8m6up6VFHs7Xzqtzh4" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
         <p>Current Front-end project where I mirror the Bugatti Chiron page. Deployment and scaling is still in progress.</p>
         <div class="links">
@@ -207,6 +209,9 @@
           </div>
           <div>
             <p><a href="https://github.com/algenisjo/chiron" class="a2" target="_blank">My Source Code</a> </p>
+          </div>
+          <div>
+            <p><a href="https://www.bugatti.com/models/chiron-models/chiron-super-sport/" class="a2" target="_blank">Chiron Link</a></p>
           </div>
         </div>
       </div>
