removed two projects divs

--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
         <p><a class="a2">Link Out Of Date</a></p>
       </div>
   
-
-      <div class="card">
+      <!-- <div class="card">
       <h2>W3Schools</h2>
       <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
       <iframe src="https://giphy.com/embed/3pCvfdhNaK0GFbuJXF" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
@@ -172,9 +171,9 @@
             <p><a href="https://www.w3schools.com" class="a2" target="_blank">W3Schools Link</a></span></p>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="card">
+      <!-- <div class="card">
       <h2>DuckDuckGo</h2>
       <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
       <iframe src="https://giphy.com/embed/VPGzrvGRXPQmqA6idy" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
@@ -192,7 +191,7 @@
         </div>
       </div>
 
-      </div>
+      </div> -->
 
     </div> 
 
