--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>PHP project where I validate information sent to the server and output messages accordingly.</p>
         <div class="links">
           <div>
-            <p><a href="http://registrationform-as23adf.epizy.com/?i=1" class="a2" target="_blank">Live Project Link</a> </p>
+            <p><a href="http://registrationform101.rf.gd/?i=1" class="a2" target="_blank">Live Project Link</a> </p>
           </div>
           <div>
             <p><a href="https://github.com/algenisjo/registrationfrom3" class="a2" target="_blank">My Source Code</a> </p>
