updated link for mysqlnotes app

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p>Dynamic PHP project where I work with MYSQL to create, update and delete notes. </p>
         <div class="links">
           <div>
-            <p><a href="http://mysqlnotesapp.lovestoblog.com/MYSQLNOTES/" class="a2" target="_blank">Live Project Link</a></p>
+            <p><a href="http://mysqlnotesapp2.rf.gd" class="a2" target="_blank">Live Project Link</a></p>
           </div>
           <div>
             <p><a href="https://github.com/algenisjo/MYSQL-Notes" class="a2" target="_blank">My Source Code</a></p>
