--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </div>
 
-      <div class="card">
+      <!-- <div class="card">
         <h2>NASA ARTEMIS</h2>
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/zVzP5ftLLFjpJ4MN9o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
@@ -145,7 +145,7 @@
             <p><a href="https://www.nasa.gov/specials/artemis/" class="a2" target="_blank">NASA Artemis Link</a></p>
           </div>
         </div>
-      </div>
+      </div> -->
 
     <div class="card">
         <h2>NE Coterie</h2>
@@ -231,7 +231,7 @@
         </div>
       </div>
 
-      <div class="card">
+      <!-- <div class="card">
         <h2>Ableton</h2>
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/DJLfXH5l2RnquOwB3i" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
@@ -248,7 +248,7 @@
             <p><a href="https://www.ableton.com/en/about/" class="a2" target="_blank">Ableton Link</a></p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="card">
         <h2>Current Portfolio</h2>
