updated description of the chiron project

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
           <iframe src="https://giphy.com/embed/8m6up6VFHs7Xzqtzh4" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
-        <p>Current Front-end project where I mirror the Bugatti Chiron page. Deployment and scaling is still in progress.</p>
+        <p>Front-End project that is Mobile Web Responsive and utilizes JQuery throughout. This is a recreation of the Chiron page of Bugatti. </p>
         <div class="links">
           <div>
             <p><a href="https://elated-heisenberg-ec425f.netlify.app" class="a2" target="_blank">Live Project Link</a> </p>
