update bored api live link, my about me card, and add Swift to my tech stack

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <a class="a2" href="https://drive.google.com/file/d/1zGZi1hOuoOYO39W76Vj8QodoBdhPWciK/view?usp=sharing" target="_blank" >Resume</a>
+    <a class="a2" href="https://drive.google.com/file/d/1D2j0VPAIsXaz-Idlq8eKKDagpX9uTllw/view?usp=sharing" target="_blank" >Resume</a>
   </div>
 
 </div>
@@ -38,7 +38,7 @@
 
     <div class="card">
     <h2>About Me</h2>
-    <p>I’m a web developer with a strong interest and enjoyment in front-end development. I have a tech stack of HTML, CSS, JavaScript, and PHP technologies. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
+    <p>I’m a web developer with a strong interest and enjoyment in front-end development. I have a tech stack of HTML, CSS, JavaScript, and PHP technologies. My current interest, studies, and career arpirations are that of Swift/SwiftUI. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
     </div>
 
     <div class="card">
@@ -49,7 +49,7 @@
 
     <div class="card">
     <h2>Languages</h2>
-    <p>HTML, CSS, PHP, JS</p>
+    <p>HTML, CSS, PHP, JS, Swift</p>
     </div>
 
     <div class="card">
@@ -88,7 +88,7 @@
         <p>Laravel project that interacts with boredapi.com to recommend activities to browsers depending on the category they select.</p>
         <div class="links">
           <div>
-            <p><a href="http://137.184.138.232/education" class="a2" target="_blank">Live Project Link</a></p>
+            <p>Project Link is down currently.</p>
           </div>
           <div>
             <p><a href="https://github.com/algenisjo/bored" class="a2" target="_blank">My Source Code</a></p>
