updated project links

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p>Dynamic PHP project where I work with MYSQL to create, update and delete notes. </p>
         <div class="links">
           <div>
-            <p><a href="http://mysqlnotesapp2.rf.gd" class="a2" target="_blank">Live Project Link</a></p>
+            <!-- <p><a href="http://mysqlnotesapp2.rf.gd" class="a2" target="_blank">Live Project Link</a></p> -->
           </div>
           <div>
             <p><a href="https://github.com/algenisjo/MYSQL-Notes" class="a2" target="_blank">My Source Code</a></p>
@@ -223,7 +223,7 @@
         <p>PHP project where I validate information sent to the server and output messages accordingly.</p>
         <div class="links">
           <div>
-            <p><a href="http://registrationform101.rf.gd/?i=1" class="a2" target="_blank">Live Project Link</a> </p>
+            <!-- <p><a href="http://registrationform101.rf.gd/?i=1" class="a2" target="_blank">Live Project Link</a> </p> -->
           </div>
           <div>
             <p><a href="https://github.com/algenisjo/registrationfrom3" class="a2" target="_blank">My Source Code</a> </p>
@@ -231,12 +231,12 @@
         </div>
       </div>
 
-      <!-- <div class="card">
+      <div class="card">
         <h2>Ableton</h2>
         <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
           <iframe src="https://giphy.com/embed/DJLfXH5l2RnquOwB3i" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
-        <p>A copy of the Ableton landing page. Here i am building my experience with HTML & CSS. </p>
+        <p>A copy of the Ableton landing page. I am building my experience with HTML & CSS. </p>
         <div class="links">
           <div>
             <p><a href="https://abletonproject.netlify.app" class="a2" target="_blank">Live Project Link</a></p>
@@ -248,7 +248,7 @@
             <p><a href="https://www.ableton.com/en/about/" class="a2" target="_blank">Ableton Link</a></p>
           </div>
         </div>
-      </div> -->
+      </div> 
 
       <div class="card">
         <h2>Current Portfolio</h2>
