--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="card">
     <h2>About Me</h2>
-    <p>I’m a web developer with a strong interest and enjoyment in front-end development. I have a tech stack of HTML, CSS, JavaScript, and PHP technologies. My current interest, studies, and career arpirations are that of Swift/SwiftUI. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
+    <p>My current interest, studies, and career arpirations are that of a Swift/SwiftUI developer. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
     </div>
 
     <div class="card">
@@ -49,18 +49,32 @@
 
     <div class="card">
     <h2>Languages</h2>
-    <p>HTML, CSS, PHP, JS, Swift</p>
+    <p>HTML, CSS, PHP, JS, Swift & SwiftUI</p>
     </div>
 
-    <div class="card">
+    <!-- <div class="card">
     <h2>Skills</h2>
     <p> API's & Web Services, OOP, JQuery, GitHub, Terminal, <br >Web Responsive Design (Media Queries), <br> Relational Databases (MYSQL), Laravel</p>
-    </div>
+    </div> -->
 
     </div>
 
     <div class="column">
 
+
+      <div class="card">
+        <h2>Captain's Log</h2>
+        <div style="width:100%;height:0;padding-bottom:54%;position:relative;">
+          <img class="fakeimg award" src="img/captainslog.png" alt="Westfield State University Logo" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></img>
+        </div>
+        <p>SwiftUI Journal App.</p>
+        <div class="links">
+          <div>
+            <p><a href="https://github.com/algenisjo/captainsLog" class="a2" target="_blank">My Source Code</a></p>
+          </div>
+        </div>
+      </div>
+      
       <div class="card">
         <h2>The North Face</h2>
         <div style="width:100%;height:0;padding-bottom:54%;position:relative;">
