changed about me section.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="card">
     <h2>About Me</h2>
-    <p>My current interest, studies, and career arpirations are that of a Swift/SwiftUI developer. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
+    <p>My current interest, studies, and career aspirations are that of a Swift/SwiftUI developer. I know my experience with several programming languages, my self-starting skills, and my ability to multi-task can be great additions to any development division. </p>
     </div>
 
     <div class="card">
