add moonshot project

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div style="width:100%;height:0;padding-bottom:54%;position:relative;">
           <img class="fakeimg award" src="img/captainslog.png" alt="Westfield State University Logo" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></img>
         </div>
-        <p>SwiftUI Journal App.</p>
+        <p>Personal SwiftUI project where users can create journal entries.</p>
         <div class="links">
           <div>
             <p><a href="https://github.com/algenisjo/captainsLog" class="a2" target="_blank">My Source Code</a></p>
@@ -210,6 +210,20 @@
     </div> 
 
     <div class="column">
+
+      <div class="card">
+        <h2>Moonshot App</h2>
+        <div style="width:100%;height:0;padding-bottom:54%;position:relative;">
+          <img class="fakeimg award" src="img/moonShot.png" alt="Westfield State University Logo" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></img>
+        </div>
+        <p>An app that lets users learn about the missions and astronauts that formed NASA’s Apollo space program</p>
+        <div class="links">
+          <div>
+            <p><a href="https://github.com/algenisjo/MoonShot" class="a2" target="_blank">My Source Code</a></p>
+          </div>
+        </div>
+      </div>
+
           <div class="card">
         <h2>Chiron</h2>
         <div style="width:100%;height:0;padding-bottom:53%;position:relative;">
