--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div style="width:100%;height:0;padding-bottom:54%;position:relative;">
           <img class="fakeimg award" src="img/captainslog.png" alt="Westfield State University Logo" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></img>
         </div>
-        <p>Personal SwiftUI project where users can create journal entries.</p>
+        <p>Personal SwiftUI project where users can create journal entries through a minimal UI and save locally to their phones.</p>
         <div class="links">
           <div>
             <p><a href="https://github.com/algenisjo/captainsLog" class="a2" target="_blank">My Source Code</a></p>
